--- a/app/src/main/res/drawable/test4.xml
+++ b/app/src/main/res/drawable/test4.xml
@@ -1,14 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid
-        android:color="#FFFFFF"
-        />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FFFFFF" /> <!-- màu nền -->
     <stroke
-        android:color="#99707070"
         android:width="1dp"
-        />
-    <corners
-        android:radius="10dp"
-        />
+        android:color="#CFCFCF" /> <!-- viền -->
+    <corners android:radius="10dp" /> <!-- bo góc -->
 </shape>
