--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#1E73BE</color>
+    <color name="blue">#0D47A1</color>
     <color name="gray">#A9A9A9</color>
 </resources>
