--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -74,15 +74,34 @@
             </LinearLayout>
 
             <!-- Icon giỏ hàng -->
-            <ImageView
-                android:id="@+id/imgCart"
-                android:layout_width="28dp"
-                android:layout_height="28dp"
-                android:layout_marginStart="10dp"
-                android:clickable="true"
-                android:focusable="true"
-                android:scaleType="fitCenter"
-                android:src="@drawable/cart" />
+            <FrameLayout
+                android:layout_width="48dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical">
+
+                <ImageButton
+                    android:id="@+id/btnCart"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/bg_circle_semi"
+                    android:src="@drawable/cart"
+                    android:contentDescription="Cart"
+                    android:padding="8dp" />
+
+                <!-- badge -->
+                <TextView
+                    android:id="@+id/tvCartBadge"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_gravity="top|end"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="2dp"
+                    android:background="@drawable/bg_badge_red"
+                    android:textColor="@android:color/white"
+                    android:textSize="11sp"
+                    android:gravity="center" />
+            </FrameLayout>
         </LinearLayout>
 
 
