--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -42,19 +42,41 @@
 
                     <ImageButton
                         android:id="@+id/btn_cart"
-                        android:layout_width="36dp"
-                        android:layout_height="36dp"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
                         android:background="@android:color/transparent"
                         android:src="@drawable/setting"
                         android:contentDescription="settings" />
 
-                    <ImageButton
-                        android:id="@+id/btn_messages"
-                        android:layout_width="36dp"
-                        android:layout_height="36dp"
-                        android:background="@android:color/transparent"
-                        android:src="@drawable/cart_white"
-                        android:contentDescription="cart" />
+                    <FrameLayout
+                        android:layout_width="48dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center_vertical">
+
+                        <ImageButton
+                            android:id="@+id/btnCart"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_gravity="center"
+                            android:foreground="@null"
+                            android:backgroundTint="@android:color/transparent"
+                            android:src="@drawable/cart_white"
+                            android:contentDescription="Cart"
+                            android:padding="8dp" />
+
+                        <!-- badge -->
+                        <TextView
+                            android:id="@+id/tvCartBadge"
+                            android:layout_width="18dp"
+                            android:layout_height="18dp"
+                            android:layout_gravity="top|end"
+                            android:layout_marginTop="4dp"
+                            android:layout_marginEnd="2dp"
+                            android:background="@drawable/bg_badge_red"
+                            android:textColor="@android:color/white"
+                            android:textSize="11sp"
+                            android:gravity="center" />
+                    </FrameLayout>
                 </LinearLayout>
 
                 <!-- Avatar + name -->
